src/main/java/com/example/demo/errors/ErrorCodes.java
package com.example.demo.errors;

public class ErrorCodes {
    public static final int PRODUCT_NOT_FOUND = 10;
    public static final int INVALID_PRODUCT_ID = 11;
    public static final int PRODUCT_CREATION_FAILED = 12;
    public static final int PRODUCT_UPDATE_FAILED = 13;
    public static final int PRODUCT_DELETION_FAILED = 14;
    public static final int INVALID_PRODUCT_DATA = 15;
    public static final int USER_NOT_FOUND = 16;
    public static final int USER_CREATION_FAILED = 17;
    public static final int USER_UPDATE_FAILED = 18;
    public static final int USER_DELETION_FAILED = 19;
    public static final int USER_AUTHENTICATION_FAILED = 20;
    public static final int USER_REGISTRATION_FAILED = 21;
    public static final int USER_LOGOUT_FAILED = 22;


}
